# MP-MVS

./: CMakeLists.txt  README.md
SkySegment/: CMakeLists.txt
SkySegment/include/: SkyRegionDetect.h
SkySegment/src/: SkyRegionDetect.cpp  SkyRegionDetect.cu
config/: config.yaml
include/: PatchMatch.h  ProjectPath.h  ProjectPath.h.in  main.h  utility.h
src/: 1.python  CMakeLists.txt  FileIO.cpp  FileIO.h  PatchMatch.cpp  PatchMatch.cu  PatchMatch.h  PatchMatch0915.cpp  SkyRegionDetect.cpp  main.cpp  main.h  patch.cu  patch2.cu  utility.cpp  utility.h
src/config/: config.yaml
